modules/zentao_deploy/modules/zentao/manifests/zentao_service.yaml
# 禅道 K8s Service
apiVersion: v1
kind: Service
metadata:
  name: zentao-svc
  namespace: ${NAMESPACE}
spec:
  type: ClusterIP
  selector:
    app: zentao
  ports:
  - port: 8080
    targetPort: 8080
    name: http
